@@ -170,6 +170,8 @@
         <object type="PCIDev" pci_busid="0000:00:1f.3" pci_type="0c05 [8086:1d22] [1028:0518] 06" pci_link_speed="0.000000"/>
       </object>
       <object type="OSDev" name="dax0.0" subtype="NVDIMM" osdev_type="0">
+        <info name="DAXType" value="NVM"/>
+        <info name="DAXParent" value="LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region0"/>
         <info name="Size" value="105281536"/>
         <info name="LinuxDeviceID" value="252:1"/>
       </object>
@@ -322,6 +324,8 @@
         <object type="PCIDev" pci_busid="0000:80:05.4" pci_type="0800 [8086:3c2c] [1028:0518] 07" pci_link_speed="0.000000"/>
       </object>
       <object type="OSDev" name="dax1.3" subtype="NVDIMM" osdev_type="0">
+        <info name="DAXType" value="NVM"/>
+        <info name="DAXParent" value="LNXSYSTM:00/LNXSYBUS:00/ACPI0012:00/ndbus0/region1/dax1.0"/>
         <info name="Size" value="61929472"/>
         <info name="LinuxDeviceID" value="252:6"/>
       </object>
