@@ -32,6 +32,9 @@ Version 2.8.0
     reporting hybrid CPUs because Intel Turbo Boost Max 3.0.
     - See the documentation of environment variable HWLOC_CPUKINDS_MAXFREQ.
   + Hardwire the PCI locality of HPE Cray EX235a nodes.
+  + Add DAXType and DAXParent attributes on Linux to tell where a DAX
+    device or its corresponding NUMA node come from (SPM for Specific-Purpose
+    or NVM for Non-Volatile Memory).
 * Tools
   + lstopo and other tools may now load Linux and x86 cpuid topology files
     from a tarball.
